kubernetes/apps/network/external-services/app/proxmox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
spec:
  ports:
    - name: http
      port: &port 8006
      protocol: TCP
      targetPort: *port
    - name: spice-console
      port: &port2 3128
      protocol: TCP
      targetPort: *port2
